--- a/styles/scss/import/general-styles.scss
+++ b/styles/scss/import/general-styles.scss
@@ -128,7 +128,7 @@ section.flex {
     display: flex;
     align-items: flex-start;
     position: relative;
-    padding: 5px;
+    padding: 5px 5px 5px 10px;
     width: 100%;
     box-sizing: border-box;
 
@@ -136,27 +136,39 @@ section.flex {
       background-color: rgba(255, 255, 255, 0.3);
     }
 
+    // IMPORTANT: Firefox has a known bug with flex containers + checkbox inputs where
+    // it miscalculates width: max-content, causing overflow. Using inline-block here
+    // instead of flex/inline-flex sidesteps this issue entirely and works correctly
+    // in all browsers. DO NOT change to display: flex without extensive testing.
+    // See CONTRIBUTING.md "Firefox flexbox + checkbox width calculation bug" for details.
     .ability-checkboxes {
-      display: flex;
-      gap: 0;
+      display: inline-block;
+      white-space: nowrap;
       margin-right: 0.5em;
-      padding-top: 0;
+      vertical-align: top;
 
       .join-line {
-        border: 1px solid var(--alt-border-strong);
-        width: 0.75em;
+        border-bottom: 2px solid var(--alt-border-strong);
+        width: 0.5em;
+        height: 1px;
         display: inline-block;
-        height: 0;
-        margin: 0 -0.15em;
-        position: relative;
-        top: 0.5em;
+        vertical-align: top;
+        margin-top: 0.5em;
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: 0;
+        line-height: 0;
       }
 
       :is(.ability-checkbox, .crew-upgrade-checkbox, .crew-ability-checkbox) {
         margin: 0;
+        padding: 0;
         position: relative;
         width: 1em;
+        min-width: 1em;
         height: 1em;
+        display: inline-block;
+        vertical-align: top;
       }
     }
   }
@@ -178,6 +190,7 @@ section.flex {
     }
   }
 }
+
 
 .visually-hidden {
   position: absolute;
